--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,27 @@
 
 #The files contain sensitive data.
 #The files are system specific and do not need to exist on every machine’s copy.
-#Excluding the files maintains system security rules and privileges. (Remember, Git repos only contain the files necessary to get tech support—not to share the entire software.)
+#Excluding the files maintains system security rules and privileges. (Remember, Git repos only contain the files necessary to get tech support—not to share the entire software.
+
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+Python
+build/
+develop-eggs/
+dist/
+downloads/
